--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
 name: BCI
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - python=3.8
   - pip
@@ -9,6 +10,7 @@ dependencies:
   - scipy
   - numpy
   - scikit-learn
+  - liblsl
   - pip:
       - explorepy>=1.6.0
       - pygame
