--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,7 @@ dependencies:
   - scikit-learn
   - liblsl
   - pip:
-      - explorepy>=1.6.0
+      - git+https://github.com/Mentalab-hub/explorepy.git@user-req-rec_struct
       - pygame
       - imblearn
       - mne
