Revert "Add custom version of explorepy"
This reverts commit 116b0f4bce07f6f7d14c9143c41aecf30e70fb0b.

--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,7 @@ dependencies:
   - scikit-learn
   - liblsl
   - pip:
-      - git+https://github.com/Mentalab-hub/explorepy.git@user-req-rec_struct
+      - explorepy>=1.6.0
       - pygame
       - imblearn
       - mne
